package org.taranix.cafe.desktop.components;

import org.eclipse.swt.widgets.Control;
import org.eclipse.swt.widgets.Widget;

public interface Component {


    Widget create(Control parent);

}
